--- a/.github/workflows/swarm-deploy.yml
+++ b/.github/workflows/swarm-deploy.yml
@@ -23,7 +23,7 @@ jobs:
             fail-fast: false
             matrix:
                 platform: [linux/amd64,linux/arm64]
-                target: [sylius_nginx,sylius_php]
+                target: [sylius_nginx,sylius_php_prod]
         
         runs-on: ubuntu-latest
         steps:
