--- a/.github/workflows/swarm-deploy.yml
+++ b/.github/workflows/swarm-deploy.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
     build-image:
-        name: Build and Push Docker Image [${{ matrix.platform }}, ${{ matrix.target }}]
+        name: Build and Push Docker Image [${{ matrix.target }}]
         env:
             MYSQL_PASSWORD: sylius-mysql
             DOCKER_BUILDKIT: 1 # Requires Latest Buildx in docker CLI
@@ -22,7 +22,6 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                platform: [linux/amd64,linux/arm64]
                 target: [sylius_nginx,sylius_php_prod]
         
         runs-on: ubuntu-latest
@@ -46,7 +45,7 @@ jobs:
                 uses: docker/build-push-action@v3
                 with:
                     push: true
-                    platforms: ${{ matrix.platform }}
+                    platforms: linux/amd64,linux/arm64
                     context: "{{defaultContext}}"
                     tags: ferror/sylius-demo:${{ matrix.target }}
                     cache-from: type=gha
