--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,7 +4,7 @@ framework:
     form: true
     csrf_protection: true
     session:
-        handler_id: ~
+        handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
     serializer:
         mapping:
             paths: [ '%kernel.project_dir%/config/serialization' ]
