--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -52,6 +52,8 @@ services:
                 reservations:
                     cpus: "1"
                     memory: 512M
+            placement:
+                constraints: [ node.role == manager ]
         environment:
             MYSQL_RANDOM_ROOT_PASSWORD: 0
             MYSQL_DATABASE: sylius_prod
@@ -110,6 +112,9 @@ services:
         volumes:
             - "/var/run/docker.sock:/var/run/docker.sock"
         deploy:
+            endpoint_mode: vip
+            mode: replicated
+            replicas: 1
             placement:
                 constraints: [ node.role == manager ]
 
