--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -11,8 +11,8 @@ services:
                 max_replicas_per_node: 6
             resources:
                 reservations:
-                    cpus: "0.5"
-                    memory: 256M
+                    cpus: "1"
+                    memory: 512M
             restart_policy:
                 condition: on-failure
                 delay: 5s
@@ -42,28 +42,6 @@ services:
         networks:
             - sylius
     
-    mysql:
-        image: mysql:5.7
-        deploy:
-            endpoint_mode: vip
-            mode: replicated
-            replicas: 1
-            resources:
-                reservations:
-                    cpus: "1"
-                    memory: 512M
-            placement:
-                constraints: [ node.role == manager ]
-        environment:
-            MYSQL_RANDOM_ROOT_PASSWORD: 0
-            MYSQL_DATABASE: sylius_prod
-            MYSQL_USER: sylius
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD:?MYSQL_PASSWORD is not set or empty}
-        volumes:
-            - ./docker/mysql/data:/var/lib/mysql:rw,delegated
-        networks:
-            - sylius
-    
     nginx:
         image: ferror/sylius-demo:sylius_nginx
         deploy:
@@ -74,8 +52,8 @@ services:
                 max_replicas_per_node: 6
             resources:
                 reservations:
-                    cpus: "0.5"
-                    memory: 256M
+                    cpus: "1"
+                    memory: 512M
             restart_policy:
                 condition: on-failure
                 delay: 5s
@@ -103,6 +81,29 @@ services:
             - sylius
         ports:
             - "80:80"
+
+    mysql:
+        image: mysql:5.7
+        deploy:
+            endpoint_mode: vip
+            mode: replicated
+            replicas: 1
+            resources:
+                reservations:
+                    cpus: "2"
+                    memory: 1024M
+            placement:
+                constraints: [ node.role == manager ]
+        environment:
+            MYSQL_RANDOM_ROOT_PASSWORD: 0
+            MYSQL_DATABASE: sylius_prod
+            MYSQL_USER: sylius
+            MYSQL_PASSWORD: sylius_mysql_password
+# Let forget about volumes here             
+#        volumes:
+#            - ./docker/mysql/data:/var/lib/mysql:rw,delegated
+        networks:
+            - sylius
 
     visualizer:
         image: dockersamples/visualizer:stable
