--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -37,8 +37,8 @@ services:
         environment:
             DATABASE_URL: mysql://sylius:${MYSQL_PASSWORD}@mysql/sylius_prod
             PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
-        volumes:
-            - ./public/media:/srv/sylius/public/media:rw
+#        volumes:
+#            - ./public/media:/srv/sylius/public/media:rw
         networks:
             - sylius
     
@@ -75,8 +75,8 @@ services:
                 order: stop-first
         depends_on:
             - php
-        volumes:
-            - ./public/media:/srv/sylius/public/media:ro
+#        volumes:
+#            - ./public/media:/srv/sylius/public/media:ro
         networks:
             - sylius
         ports:
